# bark.rn

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  bark-rn.podspec  package.json  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/barkrn/: BarkContext.kt  BarkRnModule.kt  BarkRnPackage.kt  Utils.kt
android/src/newarch/: BarkRnSpec.kt
android/src/oldarch/: BarkRnSpec.kt
cpp/: bark.cpp  bark.h  dr_wav.h  encodec.cpp  encodec.h  ggml-alloc.c  ggml-alloc.h  ggml-backend.c  ggml-backend.h  ggml-metal.h  ggml-metal.m  ggml-opencl.cpp  ggml-opencl.h  ggml.c  ggml.h  log.h  utils.cpp  utils.h
example/: Gemfile  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/barkrn/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/BarkRnExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/BarkRnExample.xcodeproj/: project.pbxproj
example/ios/BarkRnExample.xcodeproj/xcshareddata/xcschemes/: BarkRnExample.xcscheme
example/ios/BarkRnExampleTests/: BarkRnExampleTests.m
example/src/: App.tsx
ios/: BarkContext.h  BarkContext.mm  BarkRn.h  BarkRn.mm  Convert.h  Convert.mm
scripts/: bark.h.patch  bootstrap.sh  build_framework.sh  encodec.h.patch  ggml-alloc.c.patch  ggml.c.patch
src/: NativeBarkRn.ts  index.tsx
